syntax = "proto3";

package connectors_communication_package;

service ConnectorsCommunication {
    rpc stream(stream StreamRequest) returns (stream StreamResponse) {}
    rpc closeConnection(Empty) returns (Empty) {}
}

message StreamRequest {
  bytes chunk = 1;
}

message StreamResponse {
  string message = 1;
}

message Empty {}